collectd (5.4.1-4) UNRELEASED; urgency=medium

  * debian/rules:
    - Disable preprocessor warnings on kfreebsd to work around an error
      resulting from a redefined macro in PostgreSQL's pg_config_manual.h;
      thanks to Ivo De Decker for reporting this (Closes: #760719).

 -- Sebastian Harl <tokkee@debian.org>  Sat, 27 Sep 2014 19:51:49 +0000

collectd (5.4.1-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * debian/control:
    - Build-Depend on libprotobuf-c-dev instead of libprotobuf-c0-dev due to
      the protobuf-c transition (Closes: #756422).

 -- Robert S. Edmonds <edmonds@debian.org>  Tue, 12 Aug 2014 15:36:27 -0400

collectd (5.4.1-3) unstable; urgency=medium

  * debian/control:
    - Added libupsclient-dev as primary alternate build-dep to
      libupsclient1-dev; thanks to Laurent Bigonville for reporting this and
      Marc Fournier for sending a patch (Closes: #730397).

 -- Sebastian Harl <tokkee@debian.org>  Mon, 28 Apr 2014 23:29:53 +0200

collectd (5.4.1-2) unstable; urgency=medium

  * debian/rules, debian/control:
    - Disable varnish for now; it does not work with varnish 4;
      c.f. https://bugs.debian.org/745902 (Closes: #745894).
    - Drop build dependency on libvarnishapi-dev.
    - Build-depend on libow-dev and re-enable the onewire plugin; thanks to
      Adam Smutnicki for pointing this out (Closes: #744956).
  * debian/rules:
    - Added INSTALL_BASE= to perl options; else, modules are installed
      into $HOME.
    - Prepend collectd/core to collectd's header files; thanks to Sergio
      Jimenez for reporting this (Closes: #739516).
  * debian/patches:
    - Added collection.cgi.dpatch fixing apache data-sources; thanks to
      Fabiano Pires for reporting this and providing a patch
      (Closes: #743881).
    - Added myplugin_api.dpatch updating myplugin.c to the latest API.

 -- Sebastian Harl <tokkee@debian.org>  Sat, 26 Apr 2014 16:54:19 +0200

collectd (5.4.1-1) unstable; urgency=medium
