@@ -42,7 +42,7 @@ Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.14.10), po-debconf, dpatch,
  libxml2-dev,
  libyajl-dev,
  linux-libc-dev (>= 2.6.25-4) [linux-any] | linux-libc-dev (<< 2.6.25-1) [linux-any],
- default-jdk [!hppa !kfreebsd-i386 !kfreebsd-amd64],
+ default-jdk [!hppa !sparc !kfreebsd-i386 !kfreebsd-amd64],
  protobuf-c-compiler,
  python-dev
 Build-Conflicts: libpthread-dev, libhal-dev
